@@ -1,3 +1,13 @@
+2011-10-27  David Levin  <levin@chromium.org>
+
+        Test expectation errors should include the file name and platform in both the log and exception info.
+        https://bugs.webkit.org/show_bug.cgi?id=71067
+
+        Reviewed by Ojan Vafai.
+
+        * Scripts/webkitpy/layout_tests/models/test_expectations.py:
+        * Scripts/webkitpy/layout_tests/models/test_expectations_unittest.py:
+
 2011-10-27  Eric Seidel  <eric@webkit.org>
 
         new-run-webkit-tests doesn't understand --qt or --gtk
